# parserAItovar

./: README.md  config.json  config.py  index.html  main.py  parser.py  pyproject.toml
parser_engine/: category_ai.py  fallback_logic.py  matcher_ai.py  rule_detector_ai.py  scraper.py  self_heal.py
parserai/: __init__.py  core.py
templates/: base.html  competitor.html  competitor_parsing.html  competitor_rules.html  competitors.html  index.html  match.html  matching.html  product_detail.html  products.html  settings.html  test_parser.html
tests/: test_core.py
