[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parserAItovar"
version = "0.1.0"
description = "Self-healing parser toolkit"
authors = [{name = "AI"}]
requires-python = ">=3.11"
dependencies = ["openai>=1.0,<2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["parserai"]
